--- a/app/src/main/res/layout/voucher_item_view.xml
+++ b/app/src/main/res/layout/voucher_item_view.xml
@@ -33,24 +33,24 @@
                     android:id="@+id/vou_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_columnWeight="0"
+                    android:layout_column="0"
                     android:text="Nama Voucher"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/medium_text"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/vou_as_category"
+                    android:id="@+id/vou_code"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_columnWeight="1"
+                    android:layout_column="1"
                     android:layout_gravity="end"
                     android:background="@drawable/radius_primary"
                     android:paddingBottom="@dimen/xmin_padding"
                     android:paddingLeft="@dimen/med_padding"
                     android:paddingRight="@dimen/med_padding"
                     android:paddingTop="@dimen/xmin_padding"
-                    android:text="Kategori"
+                    android:text="Code"
                     android:textAlignment="center"
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/medium_text"
@@ -68,29 +68,28 @@
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:columnCount="2"
                 android:layout_marginTop="@dimen/min_padding">
 
                 <TextView
                     android:id="@+id/vou_discount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rp 10000"
+                    android:layout_column="0"
+                    android:text="10000 IDR"
                     android:textColor="@color/colorPrice"
                     android:textSize="@dimen/medium_text" />
 
-                <GridLayout
+
+                <TextView
+                    android:id="@+id/vou_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end">
-
-                    <TextView
-                        android:id="@+id/vou_type"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:text="Type"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="@dimen/medium_text" />
+                    android:text="Type"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/medium_text"
+                    android:layout_column="1"
+                    android:layout_gravity="end"/>
 
                 <!--<TextView-->
                         <!--android:id="@+id/vou_amount_text"-->
@@ -109,8 +108,65 @@
                         <!--android:text="100"-->
                         <!--android:textColor="@color/colorBlack"-->
                         <!--android:textSize="@dimen/medium_text" />-->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_column="0"
+                    >
 
-                </GridLayout>
+                    <TextView
+                        android:id="@+id/vou_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:text="07 Juli 2017"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/small_text"
+                        />
+
+                    <TextView
+                        android:id="@+id/vou_sampai"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:text=" s/d "
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="@dimen/small_text"
+                        />
+
+                    <TextView
+                        android:id="@+id/vou_endDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/xmin_padding"
+                        android:text="21 Juli 2017"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/small_text" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/vou_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_marginTop="@dimen/xmin_padding"
+                    android:text="desc"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="@dimen/small_text" />
+
+                <TextView
+                    android:id="@+id/vou_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_marginTop="@dimen/xmin_padding"
+                    android:text="Ubah"
+                    android:layout_gravity="end"
+                    android:layout_marginStart="@dimen/min_padding"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/medium_text"
+                    android:clickable="true"/>
 
             </GridLayout>
 
@@ -120,53 +176,10 @@
                 android:layout_marginTop="@dimen/xmin_padding"
                 >
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
-
-                    <TextView
-                        android:id="@+id/vou_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:text="07 Juli 2017"
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="@dimen/medium_text"
-                        />
-
-                    <TextView
-                        android:id="@+id/vou_sampai"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:text=" sampai "
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="@dimen/medium_text"
-                        />
-
-                    <TextView
-                        android:id="@+id/vou_endDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:text="21 Juli 2017"
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="@dimen/medium_text" />
-                </LinearLayout>
 
 
-                    <TextView
-                        android:id="@+id/vou_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:text="Ubah"
-                        android:gravity="end"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="@dimen/medium_text"
-                        android:clickable="true"/>
+
+
 
 
             </RelativeLayout>
