--- a/app/src/main/res/layout/content_critic_suggestion.xml
+++ b/app/src/main/res/layout/content_critic_suggestion.xml
@@ -21,8 +21,7 @@
             android:layout_height="wrap_content"
             android:focusableInTouchMode="true"
             android:orientation="vertical"
-            android:padding="@dimen/xmin_padding"
-            >
+            android:padding="@dimen/xmin_padding">
 
             <LinearLayout
                 android:layout_width="match_parent"
