--- a/app/src/main/res/layout/content_withdrawal.xml
+++ b/app/src/main/res/layout/content_withdrawal.xml
@@ -110,8 +110,8 @@
                     android:background="@color/colorNearWhite"
                     android:ems="10"
                     android:hint="Keterangan"
-                    android:inputType="textMultiLine"
                     android:imeOptions="actionDone"
+                    android:inputType="textMultiLine"
                     android:lines="3"
                     android:maxLines="5"
                     android:padding="@dimen/min_padding" />
@@ -120,8 +120,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorGrey"
-                android:text="Note : status pengajuan withdrawal dapat dilihat pada riwayat withdrawal "/>
+                android:text="Note : status pengajuan withdrawal dapat dilihat pada riwayat withdrawal "
+                android:textColor="@color/colorGrey" />
 
 
         </LinearLayout>
