--- a/app/src/main/res/layout/content_form_bicycle_aset.xml
+++ b/app/src/main/res/layout/content_form_bicycle_aset.xml
@@ -583,7 +583,7 @@
                         android:layout_height="150dp"
                         android:layout_weight="1"
                         android:scaleType="fitCenter"
-                        app:srcCompat="@drawable/cycle" />
+                        app:srcCompat="@drawable/leisure_1" />
 
                     <Button
                         android:id="@+id/btnUploadFoto"
