--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,19 +21,18 @@
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
         android:src="@drawable/logo_white_500"
-        android:contentDescription="@string/app_name"
-        />
+        android:contentDescription="@string/app_name" />
 
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusableInTouchMode="true"
             android:orientation="vertical">
 
             <TextView
@@ -103,13 +102,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:clickable="true"
                 android:fontFamily="sans-serif"
                 android:gravity="center"
                 android:text="@string/forgot_password"
                 android:textColor="@android:color/white"
-                android:textSize="14sp"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/registerAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:clickable="true"
-                />
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="Didn't have an account ? Register here !"
+                android:textColor="@android:color/white"
+                android:textSize="14sp"/>
 
         </LinearLayout>
     </ScrollView>
