--- a/app/src/main/res/layout/feature_item_view.xml
+++ b/app/src/main/res/layout/feature_item_view.xml
@@ -10,7 +10,7 @@
         android:id="@+id/card_view_feature"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/min_padding"
+        android:layout_marginBottom="@dimen/xmin_padding"
         android:clickable="true"
         android:foreground="?selectableItemBackground"
         app:cardBackgroundColor="@color/colorWhite"
@@ -20,62 +20,89 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="@dimen/med_padding">
+            android:padding="@dimen/min_padding">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:paddingRight="@dimen/xmin_padding">
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
 
                 <TextView
                     android:id="@+id/fr_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:layout_marginBottom="@dimen/xmin_padding"
                     android:layout_weight="1"
+                    android:gravity="bottom|left"
                     android:text="Additional Item"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/large_text"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/fr_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:text="0 IDR"
-                    android:textAlignment="textEnd"
-                    android:textColor="@color/colorPrice"
                     android:textSize="@dimen/medium_text"
                     android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/fr_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|center"
+                        android:layout_weight="1"
+                        android:text="0 IDR"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/colorPrice"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/fr_qty"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|center"
+                        android:layout_weight="1"
+                        android:text="Stok : 0"
+                        android:textAlignment="textEnd" />
+
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/action_feature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/fr_hide"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="@dimen/xmin_padding"
+                    app:srcCompat="@android:drawable/ic_delete" />
 
                 <ImageButton
                     android:id="@+id/fr_btn_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/xmin_padding"
                     android:layout_marginLeft="@dimen/xmin_padding"
                     android:background="@color/colorNearWhite"
-                    android:padding="@dimen/xmin_padding"
+                    android:padding="@dimen/small_space"
                     app:srcCompat="@drawable/ic_edit_black_24dp" />
 
                 <ImageButton
                     android:id="@+id/fr_btn_delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/xmin_padding"
                     android:layout_marginLeft="@dimen/xmin_padding"
                     android:background="@color/colorNearWhite"
-                    android:padding="@dimen/xmin_padding"
+                    android:padding="@dimen/small_space"
                     app:srcCompat="@drawable/ic_delete_black_24dp" />
 
             </LinearLayout>
